# todo_app

./: Cargo.toml  build.rs
src/: main.rs
src/resources/: resources.gresource.xml  window.ui
src/task_object/: imp.rs  mod.rs
src/task_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
styles/: style.css
