[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"


[dependencies]

anyhow = "1.0"
ashpd = { version = "0.6.2", features = ["gtk4"] }
async-channel = "2.0"
dirs = "5.0"
gio = "0.19.2"
gtk = { version = "*", package = "gtk4", features = ["v4_8"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
walkdir = "2.3"
window = "0.5.0"
xshell = "0.2"

[build-dependencies]
glib-build-tools = "0.18"

# todo
[[bin]]
name = "todo_app"
path = "src/main.rs"
